Inprove Practice in Login Component

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="bodyComponent">
     <div class="bodyComponent__login">
-        <img class="login__pictureHuman" src="../../../assets/img/human.png" alt="HumanPicture"/>
+        <img class="login__pictureHuman" src="../../../assets/img/human.png" alt="loginPicture"/>
         <h1>Login</h1>
         <mat-form-field class="style_label" appearance="fill">
             <mat-label class="style_label__input">Usuario</mat-label>
@@ -14,7 +14,7 @@
             </button>
         </mat-form-field>
         <div>
-            <button mat-raised-button (click)="login($event)">Login</button>
+            <button mat-raised-button (click)="login()">Login</button>
         </div>
     </div>
 </div>
