--- a/src/app/components/search-teams/search-teams.component.html
+++ b/src/app/components/search-teams/search-teams.component.html
@@ -1,1 +1,13 @@
-<p>search-teams works!</p>
+<div>
+    <table mat-table [dataSource]="data" class="mat-elevation-z8">
+        <div *ngFor="let nameColumn of namesColumns">
+            <ng-container matColumnDef={{nameColumn}}>
+                <th mat-header-cell *matHeaderCellDef>{{nameColumn}} </th>
+                <td mat-cell *matCellDef="let team">{{team[nameColumn]}}  </td>
+              </ng-container>
+        </div>
+       
+        <tr mat-header-row *matHeaderRowDef="namesColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns:namesColumns;"></tr>
+    </table> 
+</div>
