--- a/src/app/components/team-form/team-form.component.html
+++ b/src/app/components/team-form/team-form.component.html
@@ -1,1 +1,37 @@
-<p>team-form works!</p>
+<div class="form_container">
+    <mat-form-field>
+        <mat-label>Nombre</mat-label>
+        <input matInput [(ngModel)]="teamModel.nombre">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Estadio</mat-label>
+        <input matInput [(ngModel)]="teamModel.estadio">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Fundacion</mat-label>
+        <input matInput [(ngModel)]="teamModel.fundacion">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Sitio Web</mat-label>
+        <input matInput [(ngModel)]="teamModel.sitioWeb">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Nacionalidad</mat-label>
+        <input matInput [(ngModel)]="teamModel.nacionalidad">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Entrenador</mat-label>
+        <input matInput [(ngModel)]="teamModel.entrenador">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Capacidad</mat-label>
+        <input matInput [(ngModel)]="teamModel.capacidad" type="number">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label>Valor</mat-label>
+        <input matInput [(ngModel)]="teamModel.valor" type="number">
+    </mat-form-field>
+    <button mat-raised-button color="primary" (click)="saveTeam()">
+        Guardar
+    </button>
+</div>
