--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -3,20 +3,28 @@
     justify-content: center;
     height: 100%;
     align-items: center;
-    background-color: #f5f5f5;
 }
 
 .bodyComponent__login{
     width: 100%;
     max-width: 330px;
+    background-color: #ebebeb;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    padding: 1rem;
+    box-shadow: 15px 10px 10px #d7d6d6;
 }
 .login__pictureHuman{
     width: 50%;
 }
 .style_label{
     width: 80%;
+    height: 100px;
     gap: 1rem;
 }
 .style_label__input{
     padding: 16px;
+    height: 100%;
 }
