--- a/src/app/components/search-teams/search-teams.component.css
+++ b/src/app/components/search-teams/search-teams.component.css
@@ -1,8 +1,40 @@
 .search_container{
-    padding: 1rem;
+    padding: 1rem 1rem 0 1rem;
 }
 
 .team_container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.team_container_iteams{
+    grid-column: 1/1;
     display: flex;
     flex-direction: row;
+}
+.table_container{
+    padding: 1rem;
+}
+.mat-elevation-z8{
+    border-radius: 10px;
+}
+.container_buttons{
+    display: flex;
+    justify-content: space-around;
+    padding: 0.5rem 0.5rem 0 1rem;
+    gap: 0.5rem;
+    align-items: center;
+}
+.container_login{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: end;
+}
+.container_login__buttons{
+    grid-column: 2/2;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+    padding: 0 1rem 0 0;
+    gap: 0.5rem;
 }
