--- a/src/app/components/search-teams/search-teams.component.html
+++ b/src/app/components/search-teams/search-teams.component.html
@@ -1,53 +1,72 @@
 <div class="body_Search_team">
     <div class="team_container">
-        <div class="search_container">
-            <input matInput placeholder="id Equipo" name="id_team" title="Busqueda por Id del equipo" [(ngModel)]="id"
-                type="text">
+        <div class="team_container_iteams">
+            <div class="search_container">
+                <mat-form-field class="example-full-width">
+                    <mat-label>Busqueda por id</mat-label>
+                    <input matInput placeholder="id Equipo" name="id_team" title="Busqueda por Id del equipo"
+                        [(ngModel)]="id" type="number">
+                </mat-form-field>
+            </div>
+            <div class="search_container">
+                <mat-form-field class="example-full-width">
+                    <mat-label>Fecha Inicio Busqueda</mat-label>
+                    <input matInput type="date" name="start_date" title="Busqueda por fecha inicio"
+                        [(ngModel)]="starDate ">
+                </mat-form-field>
+            </div>
+            <div class="search_container">
+                <mat-form-field class="example-full-width">
+                    <mat-label>Fecha Fin Busqueda</mat-label>
+                    <input matInput type="date" name="end_date" title="Busqueda por fecha fin" [(ngModel)]="endDate">
+                </mat-form-field>
+            </div>
+            <div class="container_buttons">
+                <button mat-mini-fab color="accent" (click)="choosSearchTeam()">
+                    <mat-icon>search</mat-icon>
+                </button>
+                <button mat-mini-fab color="primary" (click)="cleanFilters()">
+                    <mat-icon>clear_all</mat-icon>
+                </button>
+            </div>
         </div>
-        <div class="search_container">
-            <input type="date" name="start_date" title="Busqueda por fecha inicio" [(ngModel)]="starDate ">
-        </div>
-        <div class="search_container">
-            <input type="date" name="end_date" title="Busqueda por fecha fin" [(ngModel)]="endDate">
-        </div>
-        <div>
-            <button mat-mini-fab color="accent" (click)="choosSearchTeam()">
-                <mat-icon>search</mat-icon>
-            </button>
-            <button mat-mini-fab color="primary" [disabled]="!login"
-                title="Para realizar esta accion, necesita esta logeado " (click)="createTeam()">
-                <mat-icon>library_add</mat-icon></button>
-            <button mat-raised-button color="primary" (click)="logout()" *ngIf="login">Salir</button>
-            <button mat-mini-fab color="primary" (click)="goLogin()" *ngIf="!login">
-                <mat-icon>account_circle</mat-icon>
-            </button>
-            <button mat-raised-button color="primary" (click)="cleanFilters()">
-                Limipiar</button>
+        <div class="container_login">
+            <div class="container_login__buttons">
+                <button mat-mini-fab color="primary" (click)="goLogin()" *ngIf="!login">
+                    <mat-icon>account_circle</mat-icon>
+                </button>
+                <button mat-mini-fab color="warn" (click)="logout()" *ngIf="login">
+                    <mat-icon>exit_to_app</mat-icon>
+                </button>
+                <button mat-mini-fab color="primary" [disabled]="!login"
+                    title="Para realizar esta accion, necesita esta logeado " (click)="createTeam()">
+                    <mat-icon>library_add</mat-icon>
+                </button>
+            </div>
         </div>
     </div>
-    <table mat-table [dataSource]="data" class="mat-elevation-z8">
-        <div *ngFor="let nameColumn of namesColumns">
-            <ng-container matColumnDef={{nameColumn}}>
-                <th mat-header-cell *matHeaderCellDef>{{nameColumn}} </th>
-                <td mat-cell *matCellDef="let team">
-                    {{team[nameColumn]}}
-                    <button mat-mini-fab color="warn" *ngIf="nameColumn == 'accion'" [disabled]="!login"
-                        title="Para realizar esta accion, necesita esta logeado" (click)="deleteTeam(team.id)">
-                        <mat-icon>delete</mat-icon>
-                    </button>
-                    <button mat-mini-fab color="warn" *ngIf="nameColumn == 'accion'"
-                        title="Para realizar esta accion, necesita esta logeado" (click)="deleteTeam(team.id)">
-                        <mat-icon>account_circle</mat-icon>
-                    </button>
-                    <button *ngIf="nameColumn == 'accion'" [disabled]="!login" [title]="!login
-                         ? 'Para realizar esta accion, necesita esta logeado'
-                        :'Actualizar informacion del equipo'" (click)="updateTeam(team.id)">
-                        actualizar
-                    </button>
-                </td>
-            </ng-container>
-        </div>
-        <tr mat-header-row *matHeaderRowDef="namesColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns:namesColumns;"></tr>
-    </table>
+    <div class="table_container">
+        <table mat-table [dataSource]="data" class="mat-elevation-z8">
+            <div *ngFor="let nameColumn of namesColumns">
+                <ng-container matColumnDef={{nameColumn}}>
+                    <th mat-header-cell *matHeaderCellDef>{{nameColumn}} </th>
+                    <td mat-cell *matCellDef="let team">
+                        {{team[nameColumn]}}
+                        <button mat-mini-fab color="warn" *ngIf="nameColumn == 'accion'" [disabled]="!login"
+                            title="Para realizar esta accion, necesita esta logeado" (click)="deleteTeam(team.id)">
+                            <mat-icon>delete</mat-icon>
+                        </button>
+                        <button mat-mini-fab color="primary" *ngIf="nameColumn == 'accion'" [disabled]="!login" [title]="!login
+                             ? 'Para realizar esta accion, necesita esta logeado'
+                            :'Actualizar informacion del equipo'" (click)="updateTeam(team.id)">
+                            <mat-icon>create</mat-icon>
+                        </button>
+                    </td>
+                </ng-container>
+            </div>
+            <tr mat-header-row *matHeaderRowDef="namesColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns:namesColumns;"></tr>
+        </table>
+
+    </div>
 </div>
