--- a/src/app/components/search-teams/search-teams.component.html
+++ b/src/app/components/search-teams/search-teams.component.html
@@ -22,24 +22,28 @@
                 </mat-form-field>
             </div>
             <div class="container_buttons">
-                <button mat-mini-fab color="accent" (click)="choosSearchTeam()">
+                <button mat-mini-fab color="accent" (click)="choosSearchTeam()" title="Buscar">
                     <mat-icon>search</mat-icon>
                 </button>
-                <button mat-mini-fab color="primary" (click)="cleanFilters()">
-                    <mat-icon>clear_all</mat-icon>
+                <button mat-mini-fab color="primary" (click)="cleanFilters()" title="Limpiar filtros">
+                    <mat-icon>clear</mat-icon>
+                </button>
+                <button mat-mini-fab color="accent" (click)="updateData()"
+                    title="Actualizar Informacion Equipos">
+                    <mat-icon>update</mat-icon>
                 </button>
             </div>
         </div>
         <div class="container_login">
             <div class="container_login__buttons">
-                <button mat-mini-fab color="primary" (click)="goLogin()" *ngIf="!login">
+                <button mat-mini-fab color="primary" (click)="goLogin()" *ngIf="!login" title="Ingresar">
                     <mat-icon>account_circle</mat-icon>
                 </button>
-                <button mat-mini-fab color="warn" (click)="logout()" *ngIf="login">
+                <button mat-mini-fab color="warn" (click)="logout()" *ngIf="login" title="Salir">
                     <mat-icon>exit_to_app</mat-icon>
                 </button>
                 <button mat-mini-fab color="primary" [disabled]="!login"
-                    title="Para realizar esta accion, necesita esta logeado " (click)="createTeam()">
+                    title="Crear equipo " (click)="createTeam()">
                     <mat-icon>library_add</mat-icon>
                 </button>
             </div>
@@ -51,14 +55,18 @@
                 <ng-container matColumnDef={{nameColumn}}>
                     <th mat-header-cell *matHeaderCellDef>{{nameColumn}} </th>
                     <td mat-cell *matCellDef="let team">
-                        {{team[nameColumn]}}
+                        <p *ngIf="nameColumn == 'valor'">
+                            {{team[nameColumn]| currency:'$ ':'symbol':'1.0-0'}}
+                        </p>
+                        <p *ngIf="nameColumn != 'valor'">
+                            {{team[nameColumn]}}
+                        </p>
                         <button mat-mini-fab color="warn" *ngIf="nameColumn == 'accion'" [disabled]="!login"
-                            title="Para realizar esta accion, necesita esta logeado" (click)="deleteTeam(team.id)">
+                            title="Eliminar equipo" (click)="deleteTeam(team.id)">
                             <mat-icon>delete</mat-icon>
                         </button>
-                        <button mat-mini-fab color="primary" *ngIf="nameColumn == 'accion'" [disabled]="!login" [title]="!login
-                             ? 'Para realizar esta accion, necesita esta logeado'
-                            :'Actualizar informacion del equipo'" (click)="updateTeam(team.id)">
+                        <button mat-mini-fab color="primary" *ngIf="nameColumn == 'accion'" [disabled]="!login"
+                         title="Actualizar informacion del equipo" (click)="updateTeam(team.id)">
                             <mat-icon>create</mat-icon>
                         </button>
                     </td>
